--- a/EKLM-Frontend/src/app/einkaufslisten-verwaltung/create-new-shoppinglist-dialog/create-new-shoppinglist-dialog.component.html
+++ b/EKLM-Frontend/src/app/einkaufslisten-verwaltung/create-new-shoppinglist-dialog/create-new-shoppinglist-dialog.component.html
@@ -12,5 +12,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-stroked-button color="warn" mat-dialog-close>Abbrechen</button>
-  <button mat-flat-button color="primary" [mat-dialog-close]="data" cdkFocusInitial>Erstellen</button>
+  <button mat-flat-button color="primary" [mat-dialog-close]="data" [disabled]="data.bezeichnung === ''" cdkFocusInitial>Erstellen</button>
 </mat-dialog-actions>
