--- a/EKLM-Frontend/src/app/einkaufslisten-verwaltung/share-einkaufsliste-dialog/share-einkaufsliste-dialog.component.html
+++ b/EKLM-Frontend/src/app/einkaufslisten-verwaltung/share-einkaufsliste-dialog/share-einkaufsliste-dialog.component.html
@@ -4,7 +4,7 @@
   <table *ngIf="usersWithAccess.length > 0" mat-table [dataSource]="usersWithAccess" style="width: 100%;">
 
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> BENU_ID </th>
+      <th mat-header-cell *matHeaderCellDef> ID </th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
 
