--- a/EKLM-Frontend/src/app/gerichte/produkte-verwaltung/create-new-product/create-new-product.component.html
+++ b/EKLM-Frontend/src/app/gerichte/produkte-verwaltung/create-new-product/create-new-product.component.html
@@ -42,5 +42,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-stroked-button color="warn" mat-dialog-close>Abbrechen</button>
-  <button mat-flat-button color="primary" [mat-dialog-close]="produkt" cdkFocusInitial>{{produkt.prodId === -1 ? 'Erstellen' : 'Ändern'}}</button>
+  <button mat-flat-button color="primary" [mat-dialog-close]="produkt" [disabled]="produkt.bezeichnung === ''" cdkFocusInitial>{{produkt.prodId === -1 ? 'Erstellen' : 'Ändern'}}</button>
 </mat-dialog-actions>
