Text nach rechts verschoben

--- a/EKLM-Frontend/src/app/einkaufslisten-verwaltung/share-einkaufsliste-dialog/share-einkaufsliste-dialog.component.html
+++ b/EKLM-Frontend/src/app/einkaufslisten-verwaltung/share-einkaufsliste-dialog/share-einkaufsliste-dialog.component.html
@@ -9,7 +9,7 @@
     </ng-container>
 
     <ng-container matColumnDef="username">
-      <th mat-header-cell *matHeaderCellDef> Nutzername </th>
+      <th mat-header-cell *matHeaderCellDef style="text-align: right;"> Nutzername </th>
       <td mat-cell *matCellDef="let row"> {{row.username}} </td>
     </ng-container>
 
