Keine Eigenschaft ohne Bezeichnung erstellbar

--- a/EKLM-Frontend/src/app/gerichte/eigenschaften-verwaltung/create-eigenschaft-dialog/create-eigenschaft-dialog.component.html
+++ b/EKLM-Frontend/src/app/gerichte/eigenschaften-verwaltung/create-eigenschaft-dialog/create-eigenschaft-dialog.component.html
@@ -11,5 +11,6 @@
 <mat-dialog-actions align="end">
   <button mat-stroked-button color="warn" mat-dialog-close>Abbrechen</button>
   <button mat-flat-button color="primary" [mat-dialog-close]="eigenschaft"
+    [disabled]="eigenschaft.bezeichnung === ''"
     cdkFocusInitial>{{ eigenschaft.eigsId === -1 ? 'Erstellen' : 'Ändern' }}</button>
 </mat-dialog-actions>
