Gericht nur mit Bezeichnung und min. einer Zutat erstellbar

--- a/EKLM-Frontend/src/app/gerichte/gerichte-verwaltung/create-new-gericht-dialog/create-new-gericht-dialog.component.html
+++ b/EKLM-Frontend/src/app/gerichte/gerichte-verwaltung/create-new-gericht-dialog/create-new-gericht-dialog.component.html
@@ -80,5 +80,6 @@
 <mat-dialog-actions align="end">
     <button mat-stroked-button color="warn" mat-dialog-close>Abbrechen</button>
     <button mat-flat-button color="primary" cdkFocusInitial
+        [disabled]="gericht.bezeichnung === '' || gericht.produkte.length === 0"
         [mat-dialog-close]="gericht">{{gericht.geriId === -1 ? 'Erstellen' : 'Ändern'}}</button>
 </mat-dialog-actions>
